[gd_scene load_steps=3 format=2]

[ext_resource path="res://FuzzyLineEdit.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="FuzzyLineEdit" type="LineEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 4
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource( 1 )

[node name="Popup" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
[connection signal="text_changed" from="." to="." method="_on_FuzzyLineEdit_text_changed"]
[connection signal="text_entered" from="." to="." method="_on_FuzzyLineEdit_text_entered"]
[connection signal="id_pressed" from="Popup" to="." method="_on_Popup_id_pressed"]
